--- a/codefresh.yml
+++ b/codefresh.yml
@@ -7,3 +7,7 @@ steps:
     image-name: codefreshexamples/express-angular-mongo
     dockerfile: Dockerfile
     tag: latest
+  push-to-dockerhub:
+    type: push
+    candidate: ${{build-step-name}}
+    tag: latest
